# single-convolution

./: CMakeLists.txt  README.md  main.cpp  naive_conv.cpp  naive_conv.h  naive_conv.py  threaded_conv.cpp  threaded_conv.h
test_cases/: gold_output.txt  input_matrix.txt  kernel_matrix.txt
